# ddes

./: CMakeLists.txt  README.md  SECURITY.md  a.out
.github/workflows/: cmake.yml
header/: dice.h  dnd.h
include/: dnd.h
main/: main.cpp
source/: dice.cpp  dnd.cpp  main.cpp
sources/source/: dice.cpp  dnd.cpp  main.cpp
src/: dice.cpp  dnd.cpp
